2009-05-06  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-title-bar.c: Now make sure all items in the title bar
	  use TitleTextColor (makes sure home edit mode text is the correct
	  Colour)

2009-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  Regression fix.  Information notes weren't added to the switcher
	  thumbnail.

2009-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Learn to deal with entirely missing menus.

	* src/launcher/hd-app-mgr.c:
	  hd_app_mgr_get:
	    bug early if somebody tries to get the appmgr object
	    before it's constructed
	  hd_app_mgr_populate_tree_finished:
	    don't start state checking the empty menu.

2009-05-06  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#113582 - Themed title colours
	* src/home/hd-title-bar.c
	* src/mb/hd-decor.c: Now load title bar colours from GTK, using either
	  default foreground colour, or 'TitleTextColor' for the Title Bar

2009-05-06  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-gtk-style.h
	* src/util/hd-gtk-style.c
	* src/home/hd-task-navigator.c: Refactored code to get colours/fonts
	  from GTK Styles into util/hd-gtk-style.c (so HdTitleBar may use it)

2009-05-06  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c: Fixed minor regression that caused flicker
	  in screen rotation transition.

2009-05-06  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Use libgnome-menu to (re)load task launcher contents.
	Fixes: NB#94416, NB#96458, NB#100815

	* configure.ac:
	* data/Makefile.am:
	* data/desktop/Makefile.am:
	* data/desktop/applications.directory:
	* data/menu/Makefile.am:
	* data/menu/hildon.menu:
	* debian/control:
	* debian/hildon-desktop.install:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-launcher-item.c:
	* src/launcher/hd-launcher-item.h:
	* src/launcher/hd-launcher-tree.c:
	* src/launcher/hd-launcher-tree.h: